@@ -1,0 +1,6 @@
+t1|t
+ERROR:  Must specify precision
+t3|t
+t4|t
+t5|t
+t6|t
