@@ -9,6 +9,7 @@ PostGIS 2.5.0
   - #3913, Upgrade when creating extension from unpackaged (Sandro Santilli)
   - #2256, _postgis_index_extent() for extent from index (Paul Ramsey)
   - #3176, Add ST_OrientedEnvelope (Dan Baston)
+  - #4029, Add ST_QuantizeCoordinates (Dan Baston)
 
 * Breaking Changes *
   - #3885, version number removed from address_standardize lib file
